@@ -3,7 +3,6 @@ package com.teamddd.duckmap.service;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -58,7 +57,7 @@ public class EventCategoryService {
 		List<EventCategory> categories = eventCategoryRepository.findAll();
 		return categories.stream()
 			.map(EventCategoryRes::of)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Transactional
